--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <div class="container">
     <h1>Identificador de Placas</h1>
     <div class="input-group">
-      <input type="text" id="inputPlaca" maxlength="7" placeholder="Digite a placa (ex: ABC1234)">
+      <input type="text" id="placaInput" maxlength="7" placeholder="Digite a placa (ex: ABC1234)" required>
     </div>
-    <button onclick="analisaPlaca()">Verificar Estado</button>
-    <div class="resultado" id="resultado"></div>
+    <button onclick="analisaPlaca()">Consultar</button>
+    <p id="resultado"></div>
   </div>
+  <script src="placasDeTransito.js"></script>
 </body>
 </html>
