--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" id="placaInput" maxlength="7" placeholder="Digite a placa (ex: ABC1234)" required>
     </div>
     <button onclick="analisaPlaca()">Consultar</button>
-    <p id="resultado"></div>
+    <p id="resultado" style="font-weight: bolder;"></div>
   </div>
   <script src="placasDeTransito.js"></script>
 </body>
