--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <button onclick="analisaPlaca()">Consultar</button>
     <p id="resultado" style="font-weight: bolder;"></div>
   </div>
-  <script src="placasDeTransito.js"></script>
+  <script src="placasDeTransitoAtualizado.js"></script>
 </body>
 </html>
