--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Identificador de Placas</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Roboto+Mono:wght@400;500&display=swap">
   <link rel="stylesheet" href="front.css">
-  <script src="placasDeTransito.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -17,6 +17,6 @@
     <button onclick="analisaPlaca()">Consultar</button>
     <p id="resultado" style="font-weight: bolder;"></div>
   </div>
-  <script src="placasDeTransitoAtualizado.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
